--- a/StockTaker/accounts/templates/registration/login.html
+++ b/StockTaker/accounts/templates/registration/login.html
@@ -1,10 +1,18 @@
 {% extends "base.html" %}
 
+{% block sidebar %}
+  {{ sidebar.super }}
+  <li>
+    <a href="{% url 'accounts:signup' %}">Sign up</a>
+  </li>
+{% endblock %}
+
+
 {% block content %}
 
   <form class="crud login" method="post" action="{% url 'login' %}">
     {% csrf_token %}
-    <ul>
+    <ul id="login-ul">
       <li>
         {{ form.username.label_tag }}
         {{ form.username }}
@@ -14,7 +22,7 @@
         {{ form.password }}
       </li>
     <li><input id="login-button" type="submit" value="login"></li>
-   <a href="{% url 'google-login' %}">Google sign in</a>
+   <a href="{% url 'accounts:google-login' %}">Google sign in</a>
    <a href="{% url 'password_reset' %}">Lost password?</a>
   <section id="errors">
     {% if form.errors %}
@@ -33,8 +41,6 @@
     </ul>
     <input type="hidden" name="next" value="{{ next }}">
   </form>
-
-
 
 {% endblock %}
 
